Fix background color on ios safari

--- a/assets/styles/components/page.css
+++ b/assets/styles/components/page.css
@@ -1,3 +1,7 @@
+html {
+  background: var(--neutral-1);
+}
+
 body {
   background: var(--neutral-1);
 
